// Copyright 2022 The gRPC Authors

syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package grpc_tools_tests.integration_tests.test_proto_outside_project;

service Greeter {
  rpc SayHello (Greet.HelloRequest) returns (Greet.HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
